# aoc2025

./: .gitignore  makefile  pyproject.toml
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
